@@ -436,7 +436,7 @@ void chan_deluser(User * user, Channel * c)
     if (c->stats->usercount == 1 && cs && PartOnEmpty) {
         denora_cmd_part(s_StatServ, c->name, "Parting Empty Channel");
         c->statservon = 0;
-    } else if (!c->users) {
+    } else if (!c->users && !ChanHasMode(c->name, ircd->persist_char)) {
         chan_delete(c);
     }
 }
