@@ -70,7 +70,8 @@ IRCDVar myIrcd[] = {
      IRCD_ENABLE,               /* svid                      */
      IRCD_DISABLE,              /* hidden oper               */
      IRCD_ENABLE,               /* extra warning             */
-     IRCD_ENABLE                /* Report sync state         */
+     IRCD_ENABLE,               /* Report sync state         */
+     IRCD_DISABLE               /* Persistent channel mode   */
      }
     ,
 };
