@@ -71,7 +71,8 @@ IRCDVar myIrcd[] = {
      IRCD_DISABLE,              /* svid                      */
      IRCD_DISABLE,              /* hidden oper               */
      IRCD_ENABLE,               /* extra warning             */
-     IRCD_DISABLE               /* Report sync state         */
+     IRCD_DISABLE,              /* Report sync state         */
+     IRCD_DISABLE               /* Persistent channel mode   */
      }
     ,
 };
